style: fix padding spacing

--- a/apps/commudle-admin/src/app/feature-modules/hackathon-control-panel/components/hackathon-control-panel-basic-form/hackathon-control-panel-basic-form.component.scss
+++ b/apps/commudle-admin/src/app/feature-modules/hackathon-control-panel/components/hackathon-control-panel-basic-form/hackathon-control-panel-basic-form.component.scss
@@ -1,10 +1,15 @@
 .hackathon-form {
-  @apply com-m-4 com-flex com-flex-col com-gap-4;
+  @apply com-my-3 com-flex com-flex-col com-gap-4;
   form {
     @apply com-flex com-flex-col com-gap-3;
     > div {
       @apply com-flex com-flex-col com-gap-1;
     }
+
+    select {
+      @apply com-border com-border-solid com-border-[#e4e9f2] com-rounded com-bg-[#f7f9fc] com-px-2 com-py-2.5;
+    }
+
     .participate-types {
       > div {
         @apply com-flex com-gap-4;
@@ -13,8 +18,9 @@
         }
       }
     }
-  }
-  select {
-    @apply com-border com-border-solid com-border-[#e4e9f2] com-rounded com-bg-[#f7f9fc] com-px-2 com-py-2.5;
+
+    .save-button {
+      @apply com-mt-5;
+    }
   }
 }
